[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/OverlayMenu.gd" type="Script" id=1]

[node name="OverlayMenu" type="PopupPanel"]
pause_mode = 2
margin_right = -885.0
margin_bottom = -506.0
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 135.0
margin_bottom = 90.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 131.0
margin_bottom = 14.0
text = "godot wild jam 20"

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 131.0
margin_bottom = 38.0
text = "resume"

[node name="Title" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 131.0
margin_bottom = 62.0
text = "back to titlescreen"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 131.0
margin_bottom = 86.0
text = "quit"
[connection signal="about_to_show" from="." to="." method="_on_OverlayMenu_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_OverlayMenu_popup_hide"]
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Title" to="." method="_on_Title_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
